관리자 기부 프로젝트 목록/상세 페이지 구현 및 스타일 파일 구조 분리

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- javascript 공개가능 -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=969656b5278fcc5261935955f61cb873&libraries=services"></script>
     <title>React App</title>
   </head>
